--- a/design/example_configuration.json
+++ b/design/example_configuration.json
@@ -1,4 +1,5 @@
 {
+	"switch_endpoint" : "127.0.0.1:3355",
 	"slices" : [
 		{
 			"controller"       : "127.0.0.1:3353",
@@ -15,6 +16,5 @@
 				}
 			]
 		}
-	],
-	"switch_endpoint" : "127.0.0.1:3355"
+	]
 }
