--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,13 @@
-add_executable(hypervisor main.cpp hypervisor.cpp)
+# We are using C++11
+set(CMAKE_CXX_STANDARD 11)
+
+add_executable(hypervisor main.cpp hypervisor.cpp slice.cpp)
+
+# Find and link with boost
+find_package(Boost
+	1.58.0
+	REQUIRED
+	system program_options thread
+)
+include_directories(${Boost_INCLUDE_DIRS})
+target_link_libraries(hypervisor ${Boost_LIBRARIES})
