--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,16 @@
 # We are using C++11
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(hypervisor main.cpp hypervisor.cpp slice.cpp)
+add_executable(hypervisor
+	main.cpp
+	hypervisor.cpp
+	slice.cpp
+	virtual_switch.cpp
+	physical_switch.cpp
+	openflow_connection.cpp)
+
+include_directories(${LibFluid_INCLUDE_DIRS})
+target_link_libraries(hypervisor ${LibFluid_LIBRARIES})
 
 # Find and link with boost
 find_package(Boost
@@ -11,3 +20,6 @@ find_package(Boost
 )
 include_directories(${Boost_INCLUDE_DIRS})
 target_link_libraries(hypervisor ${Boost_LIBRARIES})
+
+message(STATUS ${Boost_LIBRARIES})
+message(STATUS ${LibFluid_LIBRARIES})
