Refactor flowtable and rewrite functions to file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,8 @@ add_executable(hypervisor
 	physical_switch.cpp
 	physical_switch_unused.cpp
 	physical_switch_topology.cpp
+	physical_switch_flowtable.cpp
+	physical_switch_rewrite.cpp
 	openflow_connection.cpp
 	discoveredlink.cpp
 	tag.cpp)
