Fix CMakeLists to build on ubuntu 16.04
Ubuntu 16.04 is shipped with a lower version of CMake
than used during development.

The libfluid repository url required push access to
the repository, the new url can also be used just to
clone the repository.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5.2)
+cmake_minimum_required(VERSION 3.5.1)
 project(Delftvisor)
 
 # Get libfluid to build
@@ -6,7 +6,7 @@ include(ExternalProject)
 ExternalProject_Add(libfluid_msg
 	LIST_SEPARATOR    ","
 	PREFIX            "libfluid"
-	GIT_REPOSITORY    "git@github.com:harmjan/libfluid_msg.git"
+	GIT_REPOSITORY    "https://github.com/harmjan/libfluid_msg.git"
 	GIT_TAG           "thesis-fixes"
 	CONFIGURE_COMMAND ../libfluid_msg/autogen.sh && ../libfluid_msg/configure --prefix=${CMAKE_BINARY_DIR}/libfluid_build
 	UPDATE_COMMAND    ""
